fixed contrast between the foreground and the background of the skip link

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -107,9 +107,9 @@ section{
 	transition:all 200ms ease-in;
 }
 
-.skip {
+.skip a {
 	font-size: 1px;
-	color:$gray;
+	color: $black;
 }
 
 /**** HEADER ****/
